# kratos-agent

./: .dockerignore  .env.example  .env.local.example  .env.sample  .gitignore  COPILOT_SDK_MIGRATION.md  README.md  azure.yaml  docker-compose.yml  run-local.ps1  run-local.sh  skills.yaml
.copilot/skills/e2e-smoke/: SKILL.md  package-lock.json  package.json  playwright.config.ts  run.sh
.copilot/skills/e2e-smoke/tests/: 01-health.spec.ts  02-scenarios.spec.ts  03-chat.spec.ts  04-evals.spec.ts  05-traces.spec.ts  06-ui.spec.ts  07-regression.spec.ts  08-ux.spec.ts  helpers.ts
.copilot/skills/obo-demo-walkthrough/: .gitignore  SKILL.md  capture.mjs  package.json  render.mjs  report-template.html  run.sh  sample-report.html
.copilot/skills/obo-demo-walkthrough/lib/: assemble.mjs  capture-local.mjs  fetch-llm-log.mjs  merge-raw.mjs
.copilot/skills/obo-identity-proof/: SKILL.md  package-lock.json  package.json  playwright.config.ts  run.sh  tsconfig.json
.copilot/skills/obo-identity-proof/tests/: 01-identity-binding.spec.ts  02-negative.spec.ts  03-browser-proof.spec.ts  helpers.ts
.github/: ip-metadata.json
.github/workflows/: ci-cd.yml  ci.yml  deploy-docs.yml
docs/superpowers/specs/: 2026-06-17-kratos-persona-import-embed-design.md
hooks/: assign-agent-roles.sh  postdeploy.sh
infra/: abbreviations.json  main.bicep  main.json  main.parameters.json
infra/modules/: agent-role-assignments.bicep  agent-service.bicep  ai-gateway.bicep  ai-search.bicep  ai-services.bicep  app-insights.bicep  bing-search.bicep  blob-storage.bicep  container-apps-env.bicep  container-registry.bicep  cosmos-db.bicep  key-vault.bicep  log-analytics.bicep  network.bicep  obo-entra-app.bicep  obo-identity.bicep  obo-mcp-server.bicep  role-assignments.bicep  static-web-app.bicep
mocks/: .gitignore  README.md  package-lock.json  package.json
scripts/: fetch_traces.py  generate_evals.py  run_evals.py
skills/code-interpreter/: SKILL.md
skills/data-analysis/: SKILL.md
skills/document-summary/: SKILL.md
skills/document-summary/scripts/: summarize.py
skills/email-draft/: SKILL.md
skills/foundry-agent/: SKILL.md
skills/rag-search/: SKILL.md
skills/rag-search/scripts/: search.py
skills/web-search/: SKILL.md
skills/web-search/scripts/: search.py
src/backend/: .dockerignore  Dockerfile  pyproject.toml
src/backend/app/: __init__.py  auth.py  config.py  hosted_agent_invoke.py  main.py  models.py  observability.py
src/backend/app/exporter_templates/: README.md.template  agent.manifest.yaml.template  agent.yaml.template  azure.yaml.template  dot-dockerignore.template  dot-env.template  dot-gitignore.template
src/backend/app/exporter_templates/hooks/: postdeploy.ps1.template  postdeploy.sh.template
src/backend/app/exporter_templates/infra/: main.bicep
src/backend/app/exporter_templates/infra/modules/: ai-search.bicep  cosmos-db.bicep  key-vault.bicep  role-assignments.bicep
src/backend/app/routers/: admin_analysis.py  admin_apm.py  admin_mcp.py  admin_prompt.py  admin_skills.py  agent.py  conversations.py  copilot_studio.py  evals.py  export.py  files.py  health.py  import_persona.py  settings.py  traces.py  use_cases.py  voice.py
src/backend/app/services/: agent_loop.py  ai_search_tools.py  apm_service.py  blob_skill_service.py  copilot_agent.py  cosmos_service.py  eval_service.py  eval_storage.py  follow_up_service.py  foundry_agent_proxy.py  foundry_agent_service.py  project_exporter.py  skill_registry.py  skill_tools.py  traces_service.py
src/backend/tests/: test_agent_loop.py  test_copilot_agent.py  test_copilot_agent_obo.py  test_health.py  test_hosted_agent_invoke.py  test_import_persona.py  test_project_exporter.py  test_skill_registry.py  test_voice.py
src/frontend/: next.config.js  package-lock.json  package.json  staticwebapp.config.json  tailwind.config.js  tsconfig.tsbuildinfo
src/frontend/src/app/: globals.css  layout.tsx  page.tsx
src/frontend/src/components/: AgentLoop.tsx  ApmAdminPanel.tsx  ChatWindow.tsx  EvalsAdminPanel.tsx  GenerateScenariosModal.tsx  MessageBubble.tsx  OboSignIn.tsx  SettingsModal.tsx  Sidebar.tsx  SkillsAdminPanel.tsx  SourceBadge.tsx  ThemeProvider.tsx  ThoughtChain.tsx  TracesAdminPanel.tsx  VoiceOrb.tsx
src/frontend/src/lib/: api.ts  auth.ts  config.ts  embed.ts  voice.ts
src/frontend/src/types/: index.ts
src/hosted-agent/: Dockerfile  agent.manifest.yaml  agent.yaml  main.py  pyproject.toml
src/obo-mcp-server/: .env.sample  Dockerfile  obo.py  requirements.txt  server.py
use-cases/: ROADMAP.md
use-cases/clinician-visit-prep/: .mcp.json  SYSTEM_PROMPT.md  apm.yml
use-cases/clinician-visit-prep/evals/: .gitignore
use-cases/clinician-visit-prep/evals/scenarios/: daily-schedule-no-identity-ask.json  lab-trend-side-by-side.json  pre-visit-summary-with-guidelines.json  safety-no-fabrication.json  visit-prep-pack-pdf-deliverable.json
use-cases/clinician-visit-prep/skills/clinical-guidelines-reference/: SKILL.md
use-cases/clinician-visit-prep/skills/daily-schedule/: SKILL.md
use-cases/clinician-visit-prep/skills/file-sharing/: SKILL.md
use-cases/clinician-visit-prep/skills/lab-trend/: SKILL.md
use-cases/clinician-visit-prep/skills/med-and-problem-reconciliation/: SKILL.md
use-cases/clinician-visit-prep/skills/pre-visit-summary/: SKILL.md
use-cases/finance-close/: .mcp.json  SYSTEM_PROMPT.md  apm.yml
use-cases/finance-close/skills/sap-s4/: SKILL.md
use-cases/generic/: SYSTEM_PROMPT.md  apm.lock.yaml  apm.yml
use-cases/hr-onboarding/: .mcp.json  SYSTEM_PROMPT.md  apm.yml
use-cases/hr-onboarding/evals/: eval_config.json
use-cases/insurance/: SYSTEM_PROMPT.md  apm.yml
use-cases/it-service-desk/: .mcp.json  SYSTEM_PROMPT.md  apm.yml
use-cases/plant-floor-supervisor/: .mcp.json  SYSTEM_PROMPT.md  apm.yml
use-cases/retail-banking/: SYSTEM_PROMPT.md  apm.yml
use-cases/retail-banking-csr/: .mcp.json  SYSTEM_PROMPT.md  apm.yml
use-cases/sales-account-review/: .mcp.json  SYSTEM_PROMPT.md  apm.yml
use-cases/wealth-management/: .mcp.json  README_SAMPLE_DATA.md  SYSTEM_PROMPT.md  apm.yml
(+200 files in other folders)
