[project]
name = "kratos-hosted-agent"
version = "0.1.0"
description = "Kratos Agent — Foundry Hosted Agent (Invocations protocol + Copilot SDK)"
requires-python = ">=3.11"
dependencies = [
    # Hosted agent protocol adapter
    "azure-ai-agentserver-invocations>=1.0.0b3",
    # Copilot SDK engine (same version as the Container App backend)
    "github-copilot-sdk==1.0.0",
    # Azure services (reused from backend)
    "azure-identity>=1.17.0",
    "azure-cosmos>=4.7.0",
    "azure-keyvault-secrets>=4.8.0",
    "azure-search-documents>=11.6.0",
    "azure-storage-blob>=12.20.0",
    "azure-ai-projects>=1.0.0",
    # Observability
    "opentelemetry-api>=1.25.0",
    "opentelemetry-sdk>=1.25.0",
    "opentelemetry-exporter-otlp>=1.25.0",
    "opentelemetry-instrumentation-fastapi>=0.46b0",
    "opentelemetry-instrumentation-openai-v2>=2.0b0",
    "azure-monitor-opentelemetry-exporter>=1.0.0b26",
    # App dependencies (reused from backend modules)
    "fastapi>=0.115.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "httpx>=0.27.0",
    "aiohttp>=3.9.0",
    "apm-cli>=0.5.0",
    "aiosqlite>=0.20.0",
    "pymupdf>=1.24.0",
    "pyyaml>=6.0",
    "python-dotenv>=1.0.0",
]

[tool.setuptools.packages.find]
include = ["app*"]
